<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:background="@drawable/modern_background2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageButton
            android:id="@+id/info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:onClick="loadView1"
            android:src="@drawable/hearing_loss"
            android:layout_alignTop="@+id/info2" android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"/>

    <ImageButton
            android:id="@+id/info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:onClick="loadView2"
            android:src="@drawable/symptoms"
            android:layout_centerVertical="true" android:layout_alignLeft="@+id/decibelStatus"
            android:layout_alignStart="@+id/decibelStatus"/>

    <ImageButton
            android:id="@+id/info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:onClick="loadView3"
            android:src="@drawable/test_icon"
            android:layout_alignLeft="@+id/info1"
            android:layout_alignStart="@+id/info1" android:layout_alignTop="@+id/info4"/>

    <ImageButton
            android:id="@+id/info4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:onClick="loadView4"
            android:src="@drawable/learn_about"
            android:layout_above="@+id/tutorial_sub" android:layout_alignLeft="@+id/info2"
            android:layout_alignStart="@+id/info2" android:layout_marginBottom="36dp"/>

    <ImageView
            android:id="@+id/decibelStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:src="@drawable/logo_title"
            android:textSize="30sp" android:layout_alignParentTop="true" android:layout_alignParentRight="true"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" android:layout_alignParentTop="true" android:layout_toLeftOf="@+id/imageButton2"
            android:layout_marginRight="62dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_sub"
            android:textSize="15sp"
            android:id="@+id/tutorial_sub"
            android:layout_alignParentBottom="true" android:layout_alignRight="@+id/infoTV4"
            android:layout_alignEnd="@+id/infoTV4"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Infoview1"
            android:textStyle="bold"
            android:id="@+id/infoTV1"
            android:layout_below="@+id/info1" android:layout_alignLeft="@+id/info1"
            android:layout_alignStart="@+id/info1"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Infoview2"
            android:textStyle="bold"
            android:id="@+id/infoTV2" android:layout_below="@+id/info2" android:layout_alignLeft="@+id/info2"
            android:layout_alignStart="@+id/info2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Infoview3"
            android:textStyle="bold"
            android:id="@+id/infoTV3"
            android:layout_below="@+id/info3" android:layout_alignLeft="@+id/info3"
            android:layout_alignStart="@+id/info3"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Infoview4"
            android:textStyle="bold"
            android:id="@+id/infoTV4"
            android:layout_alignTop="@+id/infoTV3" android:layout_alignLeft="@+id/info4"
            android:layout_alignStart="@+id/info4"/>

</RelativeLayout>